NEWS for tlcockpit

version 0.8 (2018MMDD)
----------------------
- add debug facility (-d and -dd)
- nice spinner while waiting for loading of db
- select mirrors for main repository facility added
- speed up initial loading by using info --data and load
  pkg info on demand using info --json

version 0.7 (20171124)
----------------------
requires tlmgr >= 2017-11-23 (version 45888 of texlive.infra)
- fix behavior when closing using the Window Manager X on Windows (Issue: 2)
- use tlmgr json output
- allow ordering packages by name and by collection
- log and error output separated (Debug area)
- support for paper configuration and general options
- deal with dying tlmgr
- add search capability (searches package names and sortdesc)
- check whether tlmgr is new enough
- updates, installs, removes are online updated during operation

version 0.6 (20171012)
----------------------
- texlive infra updates handled properly (restarting tlmgr)
- scrollable list of files in pkg info window

version 0.5 (20171009)
----------------------
- better pkg info display
- try to open doc files from pkg info window
- dynamic updates of the update screen during updates

version 0.4 (20171004)
----------------------
First half-way usable version